Corrected order lines extra dekkingen

--- a/dekkingen-04.html
+++ b/dekkingen-04.html
@@ -721,10 +721,10 @@ Aangepast tov versie 03a:
                     lines += "<li>Pechhulp: <span class=\"price\">&euro; 10,96</span></li>";
                 }
                 if (vervangendvervoerCheckbox.checked) {
-                    lines += "<li>Vervangend vervoer: <span class=\"price\">&euro; 4,24</span></li>";
+                    lines += "<li>Vervangend Vervoer: <span class=\"price\">&euro; 4,24</span></li>";
                 }
                 if (noclaimCheckbox.checked) {
-                    lines += "<li>Vervangend vervoer: <span class=\"price\">&euro; 6,12</span></li>";
+                    lines += "<li>No-Claim Beschermer: <span class=\"price\">&euro; 6,12</span></li>";
                 }
                 return lines;  
             };
