--- a/dekkingen-04.html
+++ b/dekkingen-04.html
@@ -9,9 +9,9 @@ Aangepast tov versie 03a:
 - Order lines op cart
 - Basic layout
 - aria-controls="modal" weggehaald van buttons
+- kassabon regels toegevoegd aan cart
 
  TODO:
- - kassabon regels toevoegen aan cart
  - test met accessibility dev tool Chrome
  - lijstje maken met gemaakte afwegingen, leerpunten en keuzes tav accessibility rond dit component
 
