Added new version of dekkingen page, adapted content to OHRA.nl

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li>
                 <a href="dekkingen-04.html">dekkingen 04</a>
             </li>
+            <li>
+                <a href="dekkingen-05.html">dekkingen 05</a>
+            </li>
         </ul>
     </body>
 </html>
