fixed an error increasing product font size

--- a/dekkingen-05.html
+++ b/dekkingen-05.html
@@ -110,6 +110,9 @@ Aangepast tov versie 04:
             font-family: 'ZonaPro-Bold';
             color: rgb(6, 47, 196);
             line-height: 26px;
+        }
+
+        label>.product {
             font-size: 17px;
         }
 
