fixed font face urls

--- a/dekkingen-05.html
+++ b/dekkingen-05.html
@@ -18,22 +18,22 @@ Aangepast tov versie 04:
     <style>
         @font-face {
             font-family: 'ZonaPro-ExtraBold';
-            src: url('../fonts/ZonaPro-ExtraBold-webfont.ttf') format('truetype');
+            src: url('fonts/ZonaPro-ExtraBold-webfont.ttf') format('truetype');
         }
 
         @font-face {
             font-family: 'ZonaPro-Bold';
-            src: url('../fonts/ZonaPro-Bold-webfont.ttf') format('truetype');
+            src: url('fonts/ZonaPro-Bold-webfont.ttf') format('truetype');
         }
 
         @font-face {
             font-family: 'ZonaPro-SemiBold';
-            src: url('../fonts/ZonaPro-SemiBold-webfont.ttf') format('truetype');
+            src: url('fonts/ZonaPro-SemiBold-webfont.ttf') format('truetype');
         }
 
         @font-face {
             font-family: 'ZonaPro-Regular';
-            src: url('../fonts/ZonaPro-Regular-webfont.ttf') format('truetype');
+            src: url('fonts/ZonaPro-Regular-webfont.ttf') format('truetype');
         }
 
         body {
@@ -786,7 +786,7 @@ Aangepast tov versie 04:
             </div>
         </div>
 
-        <div class="cart" role="status" aria-atomic="true">
+        <div class="cart" role="status" aria-live="polite" aria-atomic="true">
             <h3>Jouw premie</h3>
             <ul id="lines">
                 <li>WA basisdekking: <span class="price">&euro; 40,33</span></li>
