prepared for responsive layout

--- a/dekkingen-05.html
+++ b/dekkingen-05.html
@@ -11,10 +11,12 @@ Aangepast tov versie 04:
  Vragen:
 
  -->
+<!doctype html>
 <html lang="nl">
 
 <head>
     <title>Wijziging doorgeven voor Autoverzekering Dacia Duster GT-564-B</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @font-face {
             font-family: 'ZonaPro-ExtraBold';
