&times; character hidden for screenreaders

--- a/dekkingen-06.html
+++ b/dekkingen-06.html
@@ -4,6 +4,7 @@
 Aangepast tov versie 05:
 - titel kassabon naar h2 niveau getild
 - aria-live beperkt tot totaalpremie
+- &times; character hidden for screenreaders
 
  Vragen:
 
@@ -400,7 +401,7 @@ Aangepast tov versie 05:
                                         aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>WA basisdekking</h3>
                                             <p>Een WA-verzekering (Wettelijke Aansprakelijkheid) dekt schade die je aan
@@ -452,7 +453,7 @@ Aangepast tov versie 05:
                                         aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>WA Plus basisdekking</h3>
                                             <p>Een WA Plus-verzekering biedt extra zekerheid voor mensen die regelmatig
@@ -528,7 +529,7 @@ Aangepast tov versie 05:
                                     <div id="modal-allriskdekking" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>All-Risk basisdekking</h3>
                                             <p>Een All-risk verzekering biedt de meest uitgebreide dekking voor je
@@ -633,7 +634,7 @@ Aangepast tov versie 05:
                                     <div id="modal-aanvullend" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>Aanvullend Pakket</h3>
                                             <p>De basisdekking WA Plus en de All-Risk kun je eenvoudig uitbreiden met de
@@ -677,7 +678,7 @@ Aangepast tov versie 05:
                                     <div id="modal-ongevalleninzittenden" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>Ongevallen Inzittenden</h3>
                                             <p>Je kunt een ongeval krijgen met je auto. Stel dat jij of je passagiers
@@ -709,7 +710,7 @@ Aangepast tov versie 05:
                                     <div id="modal-schadeinzittenden" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>Schade Inzittenden</h3>
                                             <p>Krijg je een ongeval met de auto? Met deze extra dekking vergoedt OHRA de
@@ -736,7 +737,7 @@ Aangepast tov versie 05:
                                     <div id="modal-rechtsbijstand" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>Rechtsbijstand</h3>
                                             <p>Vaak het onduidelijk wie schuldig is aan een verkeersongeval. Zonder deze
@@ -765,7 +766,7 @@ Aangepast tov versie 05:
                                     <div id="modal-pechhulp" class="modal" role="dialog" aria-modal="true">
                                         <div class="modal-content">
                                             <button type="button" class="close">
-                                                &times;<span class="visually-hidden">Sluiten</span>
+                                                <span aria-hidden="true">&times;</span><span class="visually-hidden">Sluiten</span>
                                             </button>
                                             <h3>Pechhulp Nederland</h3>
                                             <p>Kies je voor de extra dekking Pechhulp Nederland, dan kun je rekenen op:
