updated index page for version 6

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li>
                 <a href="dekkingen-05.html">dekkingen 05</a>
             </li>
+            <li>
+                <a href="dekkingen-06.html">dekkingen 06</a>
+            </li>
         </ul>
     </body>
 </html>
