added additional text for screenreaders for options

--- a/dekkingen-06.html
+++ b/dekkingen-06.html
@@ -633,13 +633,13 @@ Aangepast tov versie 05:
                     <fieldset id="eigenrisico" hidden>
                         <legend>Kies je eigen risico</legend>
                         <input type="radio" id="ir0" class="visually-hidden" name="eigenRisico" value="0">
-                        <label for="ir0">&euro; 0,-</label>
+                        <label for="ir0"><span class="visually-hidden">eigen risico</span> &euro; 0,-</label>
                         <input type="radio" id="ir150" class="visually-hidden" name="eigenRisico" value="150" checked>
-                        <label for="ir150">&euro; 150,-</label>
+                        <label for="ir150"><span class="visually-hidden">eigen risico</span> &euro; 150,-</label>
                         <input type="radio" id="ir300" class="visually-hidden" name="eigenRisico" value="300">
-                        <label for="ir300">&euro; 300,-</label>
+                        <label for="ir300"><span class="visually-hidden">eigen risico</span> &euro; 300,-</label>
                         <input type="radio" id="ir450" class="visually-hidden" name="eigenRisico" value="450">
-                        <label for="ir450">&euro; 450,-</label>
+                        <label for="ir450"><span class="visually-hidden">eigen risico</span> &euro; 450,-</label>
                     </fieldset>
 
 
